#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------

RH 2009-05-26-0: Enhancem.:  Hedeby: new test for issue 656
                 Review:     MG

AP-2009-05-25-0: Bugfix:     fixed broken ARCo installation
                 Belongs to: AP-2009-05-21-0
                 Review:     JF

MD-2009-05-25-0: Bugfix:     fixed broken installer messages
                 Belongs to: MD-2009-05-22-0
                 Review:     CR

LP-2009-05-22-1: Bugfix:     Can't change JMX port value to 0
                 Bugfix:     TS updated for removed -no-jmx option
                 Belongs to: LP-2009-05-22-0
                 Review:     CR

LP-2009-05-22-0: Bugfix:     Shadow autoinstall fails when classic spooling is
                             used
                 Bugfix:     TS updated for removed -no-jmx option
                 Bugfix:     TS fails when using first level directory (e.g.:
                             /sge) as SGE_ROOT
                 Enhancem.:  JMX now requires java 1.5+ and not stricly 1.5
                 Review:     AP

HP-2009-05-22-0: Enhancem.:  Improved error messages, added comments, adjusted
                             timeouts
                 Changed:    system_tests/clients/qrsh/check.61.exp

MD-2009-05-22-0: Enhancem.:  changed gettext messages to work with fixed installer

AP-2009-05-21-0: Enhancem.:  Running testsuite on a different host from the qmaster
                             host
                 Issue:      299
                 Bugfix:     Fixed issuezilla/1802 test - adding expected message
                 Bugfix:     Additional configuration file must be different from