@@ -6,8 +6,14 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
+CR-2009-05-27-0: Bugfix:     tight_integration_job_finished() job_state "unkown"
+                             is not an indication that job is finished anymore.
+                             This might be the reason why tight_integration test
+                             sometimes reports "only x of y jobs finished" and
+                             failed.
+                 Review:     DG
 
-RH 2009-05-26-0: Enhancem.:  Hedeby: new test for issue 656
+RH-2009-05-26-0: Enhancem.:  Hedeby: new test for issue 656
                  Review:     MG
 
 AP-2009-05-25-0: Bugfix:     fixed broken ARCo installation
